--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
     "name": "decay",
     "displayName": "Decay",
     "description": "Decay colorscheme now ported to vscode! :3",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "decaycs",
-    "repository": "https://github.com/decaycs/vscode",
+    "publisher": "decaycs",
+    "icon": "assets/logo.png",
+    "license": "See license in LICENSE",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/decaycs/vscode"
+    },
     "engines": {
         "vscode": "^1.63.1"
     },
